sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:3: error: not found: value eca
  eca = getNombreValeurs()/2
  ^AlgShellSort:4: error: not found: value eca
  while (eca>0) {
         ^AlgShellSort:6: error: not found: value eca
    var v = getValeur(eca)
                      ^AlgShellSort:7: error: not found: value eca
    var k = eca
            ^AlgShellSort:17: error: not found: value eca
    eca = eca/2
    ^